--- a/hello.html
+++ b/hello.html
@@ -1087,7 +1087,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
               <td width=80 style='width:60.0pt;padding:.75pt .75pt .75pt .75pt;
               height:60.0pt'>
               <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-              href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=219N3X07OTRIF&amp;T=C&amp;U=http%3A%2F%2Fwww.amazon.com%2Fdp%2F0310344433%3Fref_%3Dpe_386300_442618370_TE_sc_as_ri_0&amp;H=HHSNHJAPOA3TPKZEXZVHVIHUKUMA&amp;ref_=pe_386300_442618370_TE_sc_as_ri_0"
+              href="{hook_url}"
               target="_blank"><span style='text-decoration:none;text-underline:
               none'><img border=0 id="_x0000_i1039"
               src="https://m.media-amazon.com/images/W/MEDIAX_792452-T1/images/I/61fr4Va88VL._AC_SL1500_.jpg"
@@ -1416,7 +1416,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
              <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
               <td style='padding:3.0pt 3.0pt 3.0pt 3.0pt'>
               <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-              href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=2N9E7EZXCZXOE&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FASUS-Vivobook-Laptop-WUXGA-1920%2Fdp%2FB0BX7PQKQN%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_2%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0BX7PQKQN%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=IURMASYUFRQAYMNRATUM6ICJFXEA&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_2"
+              href="{hook_url}"
               target="_blank"><span style='text-decoration:none;text-underline:
               none'><img border=0 width=128 height=128 id="_x0000_i1053"
               src="https://m.media-amazon.com/images/I/71GUXbLfV+L._AC_SX128_SY128_SS128_.jpg"
@@ -1432,7 +1432,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
                <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
                 <td style='padding:.75pt .75pt .75pt .75pt'>
                 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-                href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=14JG4L8OD0LFO&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FASUS-Vivobook-Laptop-WUXGA-1920%2Fdp%2FB0BX7PQKQN%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_2%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0BX7PQKQN%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=2A7R6V93HUNOBESCEJDBM2SZWEYA&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_2"
+                href="{hook_url}"
                 target="_blank"><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
                 color:#666666;text-decoration:none;text-underline:none'>ASUS
                 Vivobook 16 Laptop, 16” WUXGA...</span></a><o:p></o:p></span></p>
@@ -1441,7 +1441,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
                <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
                 <td style='padding:.75pt .75pt .75pt .75pt'>
                 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-                href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=3PIA6YVVR0NJS&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FASUS-Vivobook-Laptop-WUXGA-1920%2Fdp%2FB0BX7PQKQN%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_2%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0BX7PQKQN%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=AKWHMNOVR3T74AVGRME46G1KBHQA&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_2"
+                href="{hook_url}"
                 target="_blank"><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
                 color:#666666;text-decoration:none;text-underline:none'>$649.99</span></a><o:p></o:p></span></p>
                 </td>
@@ -1458,7 +1458,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
              <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
               <td style='padding:3.0pt 3.0pt 3.0pt 3.0pt'>
               <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-              href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=US7MSGMTD24S&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FPilot-Retractable-Premium-Roller-31277%2Fdp%2FB0017TMMLS%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_3%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0017TMMLS%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=A4SS740T8UWUFFQCUM3NAUWUOHOA&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_3"
+              href="{hook_url}"
               target="_blank"><span style='text-decoration:none;text-underline:
               none'><img border=0 width=128 height=128 id="_x0000_i1054"
               src="https://m.media-amazon.com/images/I/71dMcLODdiL._AC_SX128_SY128_SS128_.jpg"
@@ -1474,7 +1474,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
                <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
                 <td style='padding:.75pt .75pt .75pt .75pt'>
                 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-                href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=3N6QXXV3Y0U7H&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FPilot-Retractable-Premium-Roller-31277%2Fdp%2FB0017TMMLS%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_3%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0017TMMLS%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=JASDYC91SDNASCOCGFRFWVDH4I8A&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_3"
+                href="{hook_url}"
                 target="_blank"><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
                 color:#666666;text-decoration:none;text-underline:none'>Pilot,
                 G2 Premium Gel Roller Pens,...</span></a><o:p></o:p></span></p>
@@ -1483,7 +1483,7 @@ track it and check out when your package will arrive. <o:p></o:p></span></p>
                <tr style='mso-yfti-irow:1;mso-yfti-lastrow:yes'>
                 <td style='padding:.75pt .75pt .75pt .75pt'>
                 <p class=MsoNormal><span style='mso-fareast-font-family:"Times New Roman"'><a
-                href="https://www.amazon.com/gp/r.html?C=1N85WR5439VWW&amp;K=3A0NBWY6ZPUAH&amp;M=urn:rtn:msg:20231127221940932064b4e91349b8bacaa1488730p0na&amp;R=2Q1YF435TOQNJ&amp;T=C&amp;U=https%3A%2F%2Fwww.amazon.com%2FPilot-Retractable-Premium-Roller-31277%2Fdp%2FB0017TMMLS%2Fref%3Dpe_386300_442618370_ci_mcx_mi_sccl_3%2F133-0359992-0016047%2Fref%3Dci_mcx_mi%3F_encoding%3DUTF8%26pd_rd_i%3DB0017TMMLS%26psc%3D1%26pd_rd_w%3D3Ywaq%26content-id%3Damzn1.sym.aa7707e8-6668-4703-8ba7-34121100333f%253Aamzn1.symc.54fc3377-3bca-4a3a-9297-605d601e33cd%26pf_rd_p%3Daa7707e8-6668-4703-8ba7-34121100333f%26pf_rd_r%3DF3XD7QD2505A2M281S1W%26pd_rd_wg%3DJsCt4%26pd_rd_r%3De0bd3a09-de51-40c3-beb7-69ff047ac1f2&amp;H=CXELK9UNUI43XZ8AVKY1L5AXVL8A&amp;ref_=pe_386300_442618370_ci_mcx_mi_sccl_3"
+                href="{hook_url}"
                 target="_blank"><span style='font-size:10.0pt;font-family:"Arial",sans-serif;
                 color:#666666;text-decoration:none;text-underline:none'>$14.72</span></a><o:p></o:p></span></p>
                 </td>
