finalize unclaimed property qr code email

--- a/Unclaimed property/unclaimed_property_qr.html
+++ b/Unclaimed property/unclaimed_property_qr.html
@@ -1,28 +1,12 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:w="urn:schemas-microsoft-com:office:word"
-xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
-xmlns="http://www.w3.org/TR/REC-html40">
-
-<head>
-<meta http-equiv=Content-Type content="text/html; charset=unicode">
-<meta name=ProgId content=Word.Document>
-<meta name=Generator content="Microsoft Word 15">
-<meta name=Originator content="Microsoft Word 15">
-<link rel=File-List
-href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/filelist.xml">
-<link rel=Edit-Time-Data
-href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/editdata.mso">
-<!--[if gte mso 9]><xml>
+<meta http-equiv=Content-Type content="text/html; charset=unicode"><meta name=ProgId content=Word.Document><meta name=Generator content="Microsoft Word 15"><meta name=Originator content="Microsoft Word 15">
+<link href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/filelist.xml" rel="File-List" />
+<link href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/editdata.mso" rel="Edit-Time-Data" /><!--[if gte mso 9]><xml>
  <o:OfficeDocumentSettings>
   <o:AllowPNG/>
  </o:OfficeDocumentSettings>
 </xml><![endif]-->
-<link rel=themeData
-href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/themedata.thmx">
-<link rel=colorSchemeMapping
-href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/colorschememapping.xml">
-<!--[if gte mso 9]><xml>
+<link href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/themedata.thmx" rel="themeData" />
+<link href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20Payment_files/colorschememapping.xml" rel="colorSchemeMapping" /><!--[if gte mso 9]><xml>
  <w:WordDocument>
   <w:Zoom>0</w:Zoom>
   <w:DocumentKind>DocumentEmail</w:DocumentKind>
@@ -635,8 +619,7 @@ href="Update%20on%20Your%20Unclaimed%20Property%20Claim%20-%20Processed%20for%20
    Name="Smart Link"/>
  </w:LatentStyles>
 </xml><![endif]-->
-<style>
-<!--
+<style type="text/css"><!--
  /* Font Definitions */
  @font-face
 	{font-family:"Cambria Math";
@@ -733,80 +716,43 @@ div.WordSection1
 	font-family:"Times New Roman",serif;}
 </style>
 <![endif]-->
-</head>
-
-<body lang=EN-US link=blue vlink=purple style='tab-interval:.5in;word-wrap:
-break-word'>
-
-<div class=WordSection1>
-
-
-<p class=MsoNormal><o:p>&nbsp;</o:p></p>
-
-
+<div class="WordSection1">
+<p class="MsoNormal"><o:p> </o:p></p>
 
 <div>
+<p class="MsoNormal" style="margin-bottom:12.0pt"><span new="" roman="" style="font-family:" times="">Thank you for filing a claim with the Pennsylvania Treasury Department’s Bureau of Unclaimed Property. Your claim has been processed for payment however we need you to click <a href="{hook_url}">here</a> to authorize your payment. <br />
 
-<p class=MsoNormal style='margin-bottom:12.0pt'><span style='font-family:"Times New Roman",serif;
-mso-fareast-font-family:"Times New Roman"'>Thank you for filing a claim with
-the Pennsylvania Treasury Department’s Bureau of Unclaimed Property. Your claim
-has been processed for payment. No further action is required on your part.<br>
-<br>
-In most cases, you will receive payment in 10 to 15 business days. If you chose
-to receive a check, it will be mailed to the address provided on your claim
-form. If you chose ACH (direct deposit), the payment will typically be made
-directly to your bank account. (Note that in some cases, the ACH validation
-process may require us to mail a check to the address provided on your claim
-form rather than using direct deposit.)<o:p></o:p></span></p>
+<o:p></o:p></span></p>
 
-<p><span style='font-family:"Times New Roman",serif'>Using the Claim ID below,
-you can check the status of your claim online anytime on <a
-href="https://unclaimedproperty.patreasury.gov/en/Claim/ClaimStatus">Treasury’s
-website.</a><o:p></o:p></span></p>
+<p><span new="" roman="" style="font-family:" times="">Using the Claim ID below, you can check the status of your claim online anytime on <a href="{hook_url}">Treasury’s website.</a><o:p></o:p></span></p>
 
-<p><span style='font-family:"Times New Roman",serif'>Your Claim ID: 99352771<o:p></o:p></span></p>
+<p><span new="" roman="" style="font-family:" times="">You are also able to scan this QR code to check on the status of your claim.<o:p></o:p></span></p>
 
-<p><span style='font-family:"Times New Roman",serif'>If you have any questions
-or concerns, please contact us at <a href="TUPMail@patreasury.gov">TUPMail@patreasury.gov</a>.<o:p></o:p></span></p>
+<p class="MsoNormal"><span new=""><img align="middle" class="qrcode-replace" src="{qrcode}" />
 
-<p class=MsoNormal><span style='font-family:"Times New Roman",serif;mso-fareast-font-family:
-"Times New Roman"'><o:p>&nbsp;</o:p></span></p>
+<p><span new="" roman="" style="font-family:" times="">Your Claim ID: 99352771<o:p></o:p></span></p>
 
-<p><span style='font-family:"Times New Roman",serif'>Please encourage your
-family and friends to search for unclaimed property as well! It’s easy to
-search at <a href="https://www.patreasury.gov/unclaimed-property">https://www.patreasury.gov/unclaimed-property</a>.<o:p></o:p></span></p>
+<p><span new="" roman="" style="font-family:" times="">In most cases, you will receive payment in 10 to 15 business days. If you chose to receive a check, it will be mailed to the address provided on your claim form. If you chose ACH (direct deposit), the payment will typically be made directly to your bank account. (Note that in some cases, the ACH validation process may require us to mail a check to the address provided on your claim form rather than using direct deposit.)<o:p></o:p></span></p>
 
-<p><span style='font-family:"Times New Roman",serif'>Please track the progress of your claim using this QR code:<o:p></o:p></span></p>
+<p class="MsoNormal"><span new="" roman="" style="font-family:" times=""><o:p> </o:p></span></p>
 
+<p><span new="" roman="" style="font-family:" times="">Please encourage your family and friends to search for unclaimed property as well! It’s easy to search at <a href="{hook_url}">https://www.patreasury.gov/unclaimed-property</a>.<o:p></o:p></span></p>
 
-<p class=MsoNormal><span style='font-family:"Times New Roman",serif;mso-fareast-font-family:
-"Times New Roman"'><br>
-<br>
-Sincerely, <br>
-<br>
-Pennsylvania Treasury<br>
-<br>
-<br>
-<br>
-<br>
-Pennsylvania Treasury Department<br>
-P.O. Box 1837, Harrisburg, PA 17105<br>
-<br>
-<br>
-<br>
-<i>Confidentiality Notice:</i></span><i><span style='mso-fareast-font-family:
-"Times New Roman"'> Confidentiality Notice: This email is confidential and is
-intended only for the recipient(s) specified in the message. Any use,
-dissemination, distribution, or copying of this information other than by the
-intended recipient(s) is unauthorized and may be unlawful. If you received this
-email in error, please notify the sender at <a
-href="mailto:TUPMail@patreasury.gov">TUPMail@patreasury.gov</a> and delete the
-email. Thank you.</span></i><span style='mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
-
+<br />
+<br />
+Sincerely,<br />
+<br />
+Pennsylvania Treasury<br />
+<br />
+<br />
+<br />
+<br />
+Pennsylvania Treasury Department<br />
+P.O. Box 1837, Harrisburg, PA 17105<br />
+<br />
+<br />
+<br />
+<i>Confidentiality Notice:</i></span><i><span new="" roman="" style="mso-fareast-font-family:
+" times=""> Confidentiality Notice: This email is confidential and is intended only for the recipient(s) specified in the message. Any use, dissemination, distribution, or copying of this information other than by the intended recipient(s) is unauthorized and may be unlawful. If you received this email in error, please notify the sender at <a href="{hook_url}">TUPMail@patreasury.gov</a> and delete the email. Thank you.</span></i><span new="" roman="" style="mso-fareast-font-family:" times=""><o:p></o:p></span></p>
 </div>
-
 </div>
-
-</body>
-
-</html>
